# vector-memory-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  MANIFEST.in  PUBLISHING.md  README.md  README_AGENTS.md  claude-desktop-config.example.json  main.py  pyproject.toml  requirements.txt
.ai/: test.yaml
.brain/: agent-schema.json
.brain/node/: Brain.php
.claude/: CLAUDE.md  settings.json
.claude/agents/: agent-master.md  commit-master.md  database-master.md  documentation-master.md  explore.md  pm-master.md  prompt-master.md  python-mcp-master.md  script-master.md  security-audit-master.md  testing-master.md  vector-master.md  web-research-master.md
.claude/commands/: do.md  document.md  init-agents.md  init-brain.md  init-task.md  init-vector.md  lfc.md
.docs/: brain-integration-guide.md  cookbook-api.md  mcp-integration.md  security-policy.md
.opencode/: settings.json
.opencode/agent/: agent-master.md  commit-master.md  database-master.md  documentation-master.md  explore.md  prompt-master.md  python-mcp-master.md  script-master.md  security-audit-master.md  testing-master.md  vector-master.md  web-research-master.md
.opencode/command/: do-async.md  do-sync.md  do.md  doc-work.md  init-agents.md  init-brain.md  init-task.md  init-vector.md  mem-cleanup.md  mem-get.md  mem-list.md  mem-search.md  mem-stats.md  mem-store.md  task-create.md  task-decompose.md  task-list.md  task-status.md
src/: CASES_AGENTS.md  README_AGENTS.md  __init__.py  embeddings.py  memory_store.py  models.py  security.py
tests/: __init__.py  test_cases_integrity.py  test_tag_normalize.py
(+22 files in other folders)
