[project]
name = "vector-memory-mcp"
version = "1.0.0"
description = "A secure, vector-based memory server for Claude Desktop using sqlite-vec and sentence-transformers"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.3.0",
    "sqlite-vec>=0.1.6",
    "sentence-transformers>=2.2.2",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"